--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
       <button type="button" id="greetingBtn">Greeting</button>
     </div>
 
-    <h1 id="greetingTag">Hi! Name name is <span class="bearName"></span></h1>
+    <h1 id="greetingTag"><span class="bearName"></span></h1>
 
     <h1 id="deathTag">Oh no!</h1>
 
