added PokeAPI to randomly generate images

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
 
     <div class="displayBox">
       <h2 class="bearName"><!-- Bears name goes here --></h2>
+      <div class="bearImg">
+        
+      </div>
       <h3>Sleep: <span id="bearSleep"><!-- Bears name goes here --></span> </h3>
       <h3>Attention: <span id="bearAttention"><!-- Bears name goes here --></span></h3>
       <h3>Hunger: <span id="bearHunger"><!-- Bears name goes here --></span></h3>
@@ -27,7 +30,7 @@
 
     <h1 id="greetingTag"><span class="bearName"></span></h1>
 
-    <h1 id="deathTag">Oh no!</h1>
+    <h1 id="deathTag">Oh no! You let <span class="bearName"></span> die!</h1>
 
   </body>
 </html>
