made death list work

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Bearenheit 51</h1>
+        <h1><em>Bear</em>enheit 51</h1>
       </div>
     <form class="bearForm">
       <label for="name">Your Bear's Name: </label>
@@ -22,11 +22,10 @@
       </ul>
     </div>
 
-    <h1 id="deathTag">Oh no! You let <img src="./skull.png" alt=""> <span class="bearName"></span> die!</h1>
-
+    <!-- <h1 id="deathTag">Oh no! You let <img src="./skull.png" alt=""> <span class="bearName"></span> die!</h1> -->
     <div class="deadBears">
       <h2>Fallen Bears</h2>
-      <ul>
+      <ul id="deadBearsList">
         <!-- Example Bears
         <li>Barry. Died of Stroke</li>
         <li>Terry, Died of Hunger</li> -->
