adds images to fallen bears

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1><em>Bear</em>enheit 51</h1>
+        <h1><em>Bear</em>-enheit 451</h1>
       </div>
     <form class="bearForm">
       <label for="name">Your Bear's Name: </label>
