change to math Round etc etc

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Bears Games</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-        <h1><em>Bear</em>-enheit 451</h1>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <title>Bears Games</title>
+</head>
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1><em>Bear</em>-enheit 451</h1>
+    </div>
     <form class="bearForm">
       <label for="name">Your Bear's Name: </label>
       <br>
@@ -18,20 +18,17 @@
 
     <div class="BearsBox">
       <ul id="liveBearsList">
-
+        <!-- CurrentBears -->
       </ul>
     </div>
 
-    <!-- <h1 id="deathTag">Oh no! You let <img src="./skull.png" alt=""> <span class="bearName"></span> die!</h1> -->
     <div class="deadBears">
       <h2>Fallen Bears</h2>
       <ul id="deadBearsList">
-        <!-- Example Bears
-        <li>Barry. Died of Stroke</li>
-        <li>Terry, Died of Hunger</li> -->
+        <!-- DeadBears -->
       </ul>
     </div>
 
   </div>
-  </body>
+</body>
 </html>
